--- a/public/config.json
+++ b/public/config.json
@@ -3,7 +3,7 @@
     "metaData": {
         "icon": "images/icon.png",
         "iconSmall": "images/iconSmall.png",
-        "category": "Custom Activities"
+        "category": "Messages"
     },
     "type": "REST",
     "lang": {
