--- a/public/config.json
+++ b/public/config.json
@@ -3,37 +3,54 @@
     "metaData": {
         "icon": "images/icon.png",
         "iconSmall": "images/iconSmall.png",
-        "category": "custom"
+        "category": "message"
     },
     "type": "REST",
     "lang": {
         "en-US": {
-            "name": "WA OptIn",
+            "name": "Template",
           "description": "A Template for a custom Journey Builder activity",
           "step1Label": "Configure Activity"
         }
     },
     "arguments": {
         "execute": {
-           "inArguments":[
-               {
-          "mobilenumber": "{{Contact.Attribute.YourDataExtensionName.mobilenumber}}"
-               }
-           ],
+           "inArguments":[],
           "outArguments": [],
-          "url": "https://mc80zzcs5gkfpv7l1139vq1v4k0m.pub.sfmc-content.com/dvizamati2i",
+          "url": "https://<your-domain-here>/journeybuilder/execute",
            "verb": "POST",
             "body": "",
             "header": "",
             "format": "json",
-            "useJwt": false,
+            "useJwt": true,
             "timeout": 10000
         }
     },
     "configurationArguments": {
-      "applicationExtensionKey": "edeae04d-2a93-4ed1-a8c1-9cbef3175162"
+      "save": {
+        "url": "https://<your-domain-here>/journeybuilder/save",
+          "verb": "POST",
+        "useJwt": true
+       },
+       "publish": {
+        "url": "https://<your-domain-here>/journeybuilder/publish",
+           "verb": "POST",
+        "useJwt": true
+       },
+      "stop": {
+        "url": "https://<your-domain-here>/journeybuilder/stop",
+           "verb": "POST",
+        "useJwt": true
+      },
+      "validate": {
+        "url": "https://<your-domain-here>/journeybuilder/validate",
+        "verb": "POST",
+        "useJwt": true
+      }
     },
-    "wizardSteps": [],
+    "wizardSteps": [
+        { "label": "Configure Activity", "key": "step1" }
+    ],
     "userInterfaces": {
         "configModal": {
             "height": 400,
